# GildedRose-Refactoring-Kata-Python

./: .mise.toml  GildedRoseItem.py  MyItem.py  gilded_rose.py  gilded_rose_item.py  item.py  pyproject.toml  texttest_fixture.py
tests/: test_gilded_rose.py  test_gilded_rose_approvals.py
